--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JumpSpace</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <div class="header-container">
+            <h1>JumpSpace</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Trang chủ</a></li>
+                    <li><a href="#market">Thị trường</a></li>
+                    <li><a href="#portfolio">Danh mục</a></li>
+                    <li><a href="#news">Tin tức</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h2>Theo dõi thị trường tiền điện tử</h2>
+                <p>Cập nhật giá realtime và phân tích chuyên sâu</p>
+                <div class="search-box">
+                    <input type="text" placeholder="Tìm kiếm coin..." id="searchInput">
+                </div>
+            </div>
+        </section>
+
+        <section class="market-overview">
+            <div class="crypto-grid">
+                <!-- Crypto cards sẽ được thêm vào đây bằng JavaScript -->
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>JumpSpace</h3>
+                <p>Nền tảng theo dõi tiền điện tử hàng đầu</p>
+            </div>
+            <div class="footer-section">
+                <h4>Liên kết</h4>
+                <ul>
+                    <li><a href="#about">Về chúng tôi</a></li>
+                    <li><a href="#contact">Liên hệ</a></li>
+                    <li><a href="#terms">Điều khoản</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 JumpSpace. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html> 
