--- a/index.html
+++ b/index.html
@@ -1,66 +1,23 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="6a97888e-site-verification" content="e794ae82958de30499b8d44e159b1715">
-    <title>JumpSpace</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Wolf X</title>
+    <style>
+        body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;background:#1a1a1a;color:#fff;font-family:system-ui,sans-serif;padding:15px}
+        .p{text-align:center;width:100%;max-width:500px}
+        .n{font-size:clamp(2rem,5vw,3rem);margin:0 0 10px}
+        .b{font-size:clamp(1rem,3vw,1.2rem);margin:0 0 25px;color:#888}
+        .l{display:inline-block;padding:12px 30px;background:#333;color:#fff;text-decoration:none;border-radius:25px;width:90%;max-width:250px}
+        .l:hover{background:#444}
+    </style>
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <h1>JumpSpace</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Trang chủ</a></li>
-                    <li><a href="#market">Thị trường</a></li>
-                    <li><a href="#portfolio">Danh mục</a></li>
-                    <li><a href="#news">Tin tức</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>Theo dõi thị trường tiền điện tử</h2>
-                <p>Cập nhật giá realtime và phân tích chuyên sâu</p>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm coin..." id="searchInput">
-                </div>
-            </div>
-        </section>
-
-        <section class="market-overview">
-            <div class="crypto-grid">
-                <!-- Crypto cards sẽ được thêm vào đây bằng JavaScript -->
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>JumpSpace</h3>
-                <p>Nền tảng theo dõi tiền điện tử hàng đầu</p>
-            </div>
-            <div class="footer-section">
-                <h4>Liên kết</h4>
-                <ul>
-                    <li><a href="#about">Về chúng tôi</a></li>
-                    <li><a href="#contact">Liên hệ</a></li>
-                    <li><a href="#terms">Điều khoản</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 JumpSpace. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+    <div class="p">
+        <h1 class="n">Wolf X</h1>
+        <p class="b">Make Money With Trick</p>
+        <a href="https://reurl.cc/26lkQm" class="l">Connect Now</a>
+    </div>
 </body>
 </html> 
