--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Wolf X</title>
     <style>
         body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;background:#1a1a1a;color:#fff;font-family:system-ui,sans-serif;padding:15px}
-        .p{text-align:center;width:100%;max-width:500px}
-        .n{font-size:clamp(2rem,5vw,3rem);margin:0 0 10px}
-        .b{font-size:clamp(1rem,3vw,1.2rem);margin:0 0 25px;color:#888}
-        .l{display:inline-block;padding:12px 30px;background:#333;color:#fff;text-decoration:none;border-radius:25px;width:90%;max-width:250px}
-        .l:hover{background:#444}
+        .container{text-align:center;width:100%;max-width:500px}
+        .title{font-size:clamp(2rem,5vw,3rem);margin:0 0 10px}
+        .description{font-size:clamp(1rem,3vw,1.2rem);margin:0 0 25px;color:#888}
+        .button{display:inline-block;padding:12px 30px;background:#333;color:#fff;text-decoration:none;border-radius:25px;width:90%;max-width:250px}
+        .button:hover{background:#444}
     </style>
 </head>
 <body>
-    <div class="p">
-        <h1 class="n">Wolf X</h1>
-        <p class="b">Make Money With Trick</p>
-        <a href="https://reurl.cc/26lkQm" class="l">Connect Now</a>
+    <div class="container">
+        <h1 class="title">Wolf X</h1>
+        <p class="description">Make Money With Trick</p>
+        <a href="https://reurl.cc/26lkQm" class="button">Connect Now</a>
     </div>
 </body>
 </html> 
