--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
         .container{text-align:center;width:100%;max-width:500px}
         .title{font-size:clamp(2rem,5vw,3rem);margin:0 0 10px}
         .description{font-size:clamp(1rem,3vw,1.2rem);margin:0 0 25px;color:#888}
-        .button{display:inline-block;padding:12px 30px;background:#333;color:#fff;text-decoration:none;border-radius:25px;width:90%;max-width:250px}
-        .button:hover{background:#444}
+        .button-1{display:inline-block;padding:12px 30px;background:#333;color:#fff;text-decoration:none;border-radius:25px;width:90%;max-width:250px;margin:10px auto}
+        .button-2{display:inline-block;padding:12px 30px;background:#333;color:#fff;text-decoration:none;border-radius:25px;width:90%;max-width:250px;margin:10px auto}
+        .button-1:hover{background:#444}
+        .button-2:hover{background:#444}
     </style>
 </head>
 <body>
     <div class="container">
         <h1 class="title">Wolf X</h1>
         <p class="description">Make Money With Trick</p>
-        <a href="https://reurl.cc/26lkQm" class="button">Connect Now</a>
+            <a href="https://reurl.cc/26lkQm" class="button-1">Link 1</a>
+            <a href="https://reurl.cc/960eXY" class="button-2">Link 2</a>
     </div>
 </body>
 </html> 
