--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="container">
         <h1 class="title">Wolf X</h1>
         <p class="description">Make Money With Trick</p>
-            <a href="https://reurl.cc/26lkQm" class="button-1">Link 1</a>
-            <a href="https://reurl.cc/960eXY" class="button-2">Link 2</a>
+            <a href="https://reurl.cc/WAzDM7" class="button-1">Link 1</a>
+            <a href="https://reurl.cc/WAzDM7" class="button-2">Link 2</a>
     </div>
 </body>
 </html> 
