--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Wolf X</h1>
+        <h1 class="title">Anh Khoa</h1>
         <p class="description">Make Money With Trick</p>
             <a href="https://reurl.cc/WAzDM7" class="button-1">Link 1</a>
             <a href="https://reurl.cc/WAzDM7" class="button-2">Link 2</a>
